src/ANTLR/turtleParser.ts
// Generated from ./turtle.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { RecognitionException } from "antlr4ts/RecognitionException";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { turtleListener } from "./turtleListener";

export class turtleParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly NumericLiteral = 14;
	public static readonly BooleanLiteral = 15;
	public static readonly String = 16;
	public static readonly BlankNode = 17;
	public static readonly WS = 18;
	public static readonly PN_PREFIX = 19;
	public static readonly IRIREF = 20;
	public static readonly PNAME_NS = 21;
	public static readonly PrefixedName = 22;
	public static readonly PNAME_LN = 23;
	public static readonly BLANK_NODE_LABEL = 24;
	public static readonly LANGTAG = 25;
	public static readonly INTEGER = 26;
	public static readonly DECIMAL = 27;
	public static readonly DOUBLE = 28;
	public static readonly EXPONENT = 29;
	public static readonly STRING_LITERAL_LONG_SINGLE_QUOTE = 30;
	public static readonly STRING_LITERAL_LONG_QUOTE = 31;
	public static readonly STRING_LITERAL_QUOTE = 32;
	public static readonly STRING_LITERAL_SINGLE_QUOTE = 33;
	public static readonly UCHAR = 34;
	public static readonly ECHAR = 35;
	public static readonly ANON_WS = 36;
	public static readonly ANON = 37;
	public static readonly PN_CHARS_BASE = 38;
	public static readonly PN_CHARS_U = 39;
	public static readonly PN_CHARS = 40;
	public static readonly PN_LOCAL = 41;
	public static readonly PLX = 42;
	public static readonly PERCENT = 43;
	public static readonly HEX = 44;
	public static readonly PN_LOCAL_ESC = 45;
	public static readonly RULE_turtleDoc = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_directive = 2;
	public static readonly RULE_prefixID = 3;
	public static readonly RULE_base = 4;
	public static readonly RULE_sparqlBase = 5;
	public static readonly RULE_sparqlPrefix = 6;
	public static readonly RULE_triples = 7;
	public static readonly RULE_predicateObjectList = 8;
	public static readonly RULE_objectList = 9;
	public static readonly RULE_verb = 10;
	public static readonly RULE_subject = 11;
	public static readonly RULE_predicate = 12;
	public static readonly RULE_object_ = 13;
	public static readonly RULE_literal = 14;
	public static readonly RULE_blankNodePropertyList = 15;
	public static readonly RULE_collection = 16;
	public static readonly RULE_rdfLiteral = 17;
	public static readonly RULE_iri = 18;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"turtleDoc", "statement", "directive", "prefixID", "base", "sparqlBase", 
		"sparqlPrefix", "triples", "predicateObjectList", "objectList", "verb", 
		"subject", "predicate", "object_", "literal", "blankNodePropertyList", 
		"collection", "rdfLiteral", "iri",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'.'", "'@prefix'", "'@base'", "'BASE'", "'PREFIX'", "';'", 
		"','", "'a'", "'['", "']'", "'('", "')'", "'^^'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"NumericLiteral", "BooleanLiteral", "String", "BlankNode", "WS", "PN_PREFIX", 
		"IRIREF", "PNAME_NS", "PrefixedName", "PNAME_LN", "BLANK_NODE_LABEL", 
		"LANGTAG", "INTEGER", "DECIMAL", "DOUBLE", "EXPONENT", "STRING_LITERAL_LONG_SINGLE_QUOTE", 
		"STRING_LITERAL_LONG_QUOTE", "STRING_LITERAL_QUOTE", "STRING_LITERAL_SINGLE_QUOTE", 
		"UCHAR", "ECHAR", "ANON_WS", "ANON", "PN_CHARS_BASE", "PN_CHARS_U", "PN_CHARS", 
		"PN_LOCAL", "PLX", "PERCENT", "HEX", "PN_LOCAL_ESC",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(turtleParser._LITERAL_NAMES, turtleParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return turtleParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "turtle.g4"; }

	// @Override
	public get ruleNames(): string[] { return turtleParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return turtleParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(turtleParser._ATN, this);
	}
	// @RuleVersion(0)
	public turtleDoc(): TurtleDocContext {
		let _localctx: TurtleDocContext = new TurtleDocContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, turtleParser.RULE_turtleDoc);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 41;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << turtleParser.T__1) | (1 << turtleParser.T__2) | (1 << turtleParser.T__3) | (1 << turtleParser.T__4) | (1 << turtleParser.T__8) | (1 << turtleParser.T__10) | (1 << turtleParser.BlankNode) | (1 << turtleParser.IRIREF) | (1 << turtleParser.PrefixedName))) !== 0)) {
				{
				{
				this.state = 38;
				this.statement();
				}
				}
				this.state = 43;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, turtleParser.RULE_statement);
		try {
			this.state = 48;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case turtleParser.T__1:
			case turtleParser.T__2:
			case turtleParser.T__3:
			case turtleParser.T__4:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 44;
				this.directive();
				}
				break;
			case turtleParser.T__8:
			case turtleParser.T__10:
			case turtleParser.BlankNode:
			case turtleParser.IRIREF:
			case turtleParser.PrefixedName:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 45;
				this.triples();
				this.state = 46;
				this.match(turtleParser.T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public directive(): DirectiveContext {
		let _localctx: DirectiveContext = new DirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, turtleParser.RULE_directive);
		try {
			this.state = 54;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case turtleParser.T__1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 50;
				this.prefixID();
				}
				break;
			case turtleParser.T__2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 51;
				this.base();
				}
				break;
			case turtleParser.T__4:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 52;
				this.sparqlPrefix();
				}
				break;
			case turtleParser.T__3:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 53;
				this.sparqlBase();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public prefixID(): PrefixIDContext {
		let _localctx: PrefixIDContext = new PrefixIDContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, turtleParser.RULE_prefixID);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 56;
			this.match(turtleParser.T__1);
			this.state = 57;
			this.match(turtleParser.PNAME_NS);
			this.state = 58;
			this.match(turtleParser.IRIREF);
			this.state = 59;
			this.match(turtleParser.T__0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public base(): BaseContext {
		let _localctx: BaseContext = new BaseContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, turtleParser.RULE_base);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 61;
			this.match(turtleParser.T__2);
			this.state = 62;
			this.match(turtleParser.IRIREF);
			this.state = 63;
			this.match(turtleParser.T__0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sparqlBase(): SparqlBaseContext {
		let _localctx: SparqlBaseContext = new SparqlBaseContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, turtleParser.RULE_sparqlBase);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 65;
			this.match(turtleParser.T__3);
			this.state = 66;
			this.match(turtleParser.IRIREF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sparqlPrefix(): SparqlPrefixContext {
		let _localctx: SparqlPrefixContext = new SparqlPrefixContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, turtleParser.RULE_sparqlPrefix);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 68;
			this.match(turtleParser.T__4);
			this.state = 69;
			this.match(turtleParser.PNAME_NS);
			this.state = 70;
			this.match(turtleParser.IRIREF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public triples(): TriplesContext {
		let _localctx: TriplesContext = new TriplesContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, turtleParser.RULE_triples);
		let _la: number;
		try {
			this.state = 79;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case turtleParser.T__10:
			case turtleParser.BlankNode:
			case turtleParser.IRIREF:
			case turtleParser.PrefixedName:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 72;
				this.subject();
				this.state = 73;
				this.predicateObjectList();
				}
				break;
			case turtleParser.T__8:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 75;
				this.blankNodePropertyList();
				this.state = 77;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << turtleParser.T__7) | (1 << turtleParser.IRIREF) | (1 << turtleParser.PrefixedName))) !== 0)) {
					{
					this.state = 76;
					this.predicateObjectList();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public predicateObjectList(): PredicateObjectListContext {
		let _localctx: PredicateObjectListContext = new PredicateObjectListContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, turtleParser.RULE_predicateObjectList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 81;
			this.verb();
			this.state = 82;
			this.objectList();
			this.state = 91;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === turtleParser.T__5) {
				{
				{
				this.state = 83;
				this.match(turtleParser.T__5);
				this.state = 87;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << turtleParser.T__7) | (1 << turtleParser.IRIREF) | (1 << turtleParser.PrefixedName))) !== 0)) {
					{
					this.state = 84;
					this.verb();
					this.state = 85;
					this.objectList();
					}
				}

				}
				}
				this.state = 93;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public objectList(): ObjectListContext {
		let _localctx: ObjectListContext = new ObjectListContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, turtleParser.RULE_objectList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 94;
			this.object_();
			this.state = 99;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === turtleParser.T__6) {
				{
				{
				this.state = 95;
				this.match(turtleParser.T__6);
				this.state = 96;
				this.object_();
				}
				}
				this.state = 101;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public verb(): VerbContext {
		let _localctx: VerbContext = new VerbContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, turtleParser.RULE_verb);
		try {
			this.state = 104;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case turtleParser.IRIREF:
			case turtleParser.PrefixedName:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 102;
				this.predicate();
				}
				break;
			case turtleParser.T__7:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 103;
				this.match(turtleParser.T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public subject(): SubjectContext {
		let _localctx: SubjectContext = new SubjectContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, turtleParser.RULE_subject);
		try {
			this.state = 109;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case turtleParser.IRIREF:
			case turtleParser.PrefixedName:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 106;
				this.iri();
				}
				break;
			case turtleParser.BlankNode:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 107;
				this.match(turtleParser.BlankNode);
				}
				break;
			case turtleParser.T__10:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 108;
				this.collection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public predicate(): PredicateContext {
		let _localctx: PredicateContext = new PredicateContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, turtleParser.RULE_predicate);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this.iri();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public object_(): Object_Context {
		let _localctx: Object_Context = new Object_Context(this._ctx, this.state);
		this.enterRule(_localctx, 26, turtleParser.RULE_object_);
		try {
			this.state = 118;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case turtleParser.IRIREF:
			case turtleParser.PrefixedName:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 113;
				this.iri();
				}
				break;
			case turtleParser.BlankNode:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 114;
				this.match(turtleParser.BlankNode);
				}
				break;
			case turtleParser.T__10:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 115;
				this.collection();
				}
				break;
			case turtleParser.T__8:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 116;
				this.blankNodePropertyList();
				}
				break;
			case turtleParser.NumericLiteral:
			case turtleParser.BooleanLiteral:
			case turtleParser.String:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 117;
				this.literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public literal(): LiteralContext {
		let _localctx: LiteralContext = new LiteralContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, turtleParser.RULE_literal);
		try {
			this.state = 123;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case turtleParser.String:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 120;
				this.rdfLiteral();
				}
				break;
			case turtleParser.NumericLiteral:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 121;
				this.match(turtleParser.NumericLiteral);
				}
				break;
			case turtleParser.BooleanLiteral:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 122;
				this.match(turtleParser.BooleanLiteral);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public blankNodePropertyList(): BlankNodePropertyListContext {
		let _localctx: BlankNodePropertyListContext = new BlankNodePropertyListContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, turtleParser.RULE_blankNodePropertyList);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 125;
			this.match(turtleParser.T__8);
			this.state = 126;
			this.predicateObjectList();
			this.state = 127;
			this.match(turtleParser.T__9);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public collection(): CollectionContext {
		let _localctx: CollectionContext = new CollectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, turtleParser.RULE_collection);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 129;
			this.match(turtleParser.T__10);
			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << turtleParser.T__8) | (1 << turtleParser.T__10) | (1 << turtleParser.NumericLiteral) | (1 << turtleParser.BooleanLiteral) | (1 << turtleParser.String) | (1 << turtleParser.BlankNode) | (1 << turtleParser.IRIREF) | (1 << turtleParser.PrefixedName))) !== 0)) {
				{
				{
				this.state = 130;
				this.object_();
				}
				}
				this.state = 135;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 136;
			this.match(turtleParser.T__11);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public rdfLiteral(): RdfLiteralContext {
		let _localctx: RdfLiteralContext = new RdfLiteralContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, turtleParser.RULE_rdfLiteral);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.match(turtleParser.String);
			this.state = 142;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case turtleParser.LANGTAG:
				{
				this.state = 139;
				this.match(turtleParser.LANGTAG);
				}
				break;
			case turtleParser.T__12:
				{
				this.state = 140;
				this.match(turtleParser.T__12);
				this.state = 141;
				this.iri();
				}
				break;
			case turtleParser.T__0:
			case turtleParser.T__5:
			case turtleParser.T__6:
			case turtleParser.T__8:
			case turtleParser.T__9:
			case turtleParser.T__10:
			case turtleParser.T__11:
			case turtleParser.NumericLiteral:
			case turtleParser.BooleanLiteral:
			case turtleParser.String:
			case turtleParser.BlankNode:
			case turtleParser.IRIREF:
			case turtleParser.PrefixedName:
				break;
			default:
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public iri(): IriContext {
		let _localctx: IriContext = new IriContext(this._ctx, this.state);
		this.enterRule(_localctx, 36, turtleParser.RULE_iri);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 144;
			_la = this._input.LA(1);
			if (!(_la === turtleParser.IRIREF || _la === turtleParser.PrefixedName)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!turtleParser.__ATN) {
			turtleParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(turtleParser._serializedATN));
		}

		return turtleParser.__ATN;
	}

}

export class TurtleDocContext extends ParserRuleContext {
	public statement(): StatementContext[];
	public statement(i: number): StatementContext;
	public statement(i?: number): StatementContext | StatementContext[] {
		if (i === undefined) {
			return this.getRuleContexts(StatementContext);
		} else {
			return this.getRuleContext(i, StatementContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return turtleParser.RULE_turtleDoc; }
	// @Override
	public enterRule(listener: turtleListener): void {
		if (listener.enterTurtleDoc) {
			listener.enterTurtleDoc(this);
		}
	}
	// @Override
	public exitRule(listener: turtleListener): void {
		if (listener.exitTurtleDoc) {
			listener.exitTurtleDoc(this);
		}
	}
}

